# agent-sessions

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  droid_sessions.py  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/notepads/sqlite-index-v2/: issues.md  learnings.md
.sisyphus/plans/: sqlite-index-v2.md
agent_sessions/: __init__.py  annotations.py  app.py  cache.py  main.py  models.py  search.py
agent_sessions.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent_sessions/index/: __init__.py  chunker.py  database.py  embeddings.py  indexer.py  search.py  tagger.py
agent_sessions/providers/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  droid.py  opencode.py
agent_sessions/ui/: __init__.py  styles.py  widgets.py
docs/: PLAN.md  SQLITE_INDEX_PLAN.md
tests/: __init__.py  test_hybrid_search.py  test_indexer.py  test_providers.py  test_search.py  test_transcript_find.py  test_transcript_find_pilot.py
tests/fixtures/: claude_code_session.jsonl  codex_child_session.jsonl  codex_parent_session.jsonl  droid_session.jsonl
