[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droid-sessions"
version = "0.1.0"
description = "A Textual TUI for browsing and resuming Factory Droid sessions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Erik Fritsch"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]
keywords = ["tui", "terminal", "factory", "droid", "ai", "sessions"]
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
droid-sessions = "droid_sessions:main"

[project.urls]
Homepage = "https://github.com/erikjamesfritsch/droid-sessions"
Repository = "https://github.com/erikjamesfritsch/droid-sessions"
Issues = "https://github.com/erikjamesfritsch/droid-sessions/issues"

[tool.setuptools]
py-modules = ["droid_sessions"]
