[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sessions"
version = "0.1.0"
description = "Universal TUI for browsing and resuming sessions from multiple AI coding assistants"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Erik Fritsch"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]
keywords = ["tui", "terminal", "ai", "sessions", "claude", "cursor", "droid", "coding-assistant"]
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
agent-sessions = "agent_sessions.main:main"
ais = "agent_sessions.main:main"
# Keep old command for backwards compatibility
droid-sessions = "agent_sessions.main:main"

[project.urls]
Homepage = "https://github.com/erikjamesfritsch/agent-sessions"
Repository = "https://github.com/erikjamesfritsch/agent-sessions"
Issues = "https://github.com/erikjamesfritsch/agent-sessions/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_sessions*"]
